[gd_scene load_steps=13 format=3 uid="uid://gir16deu86n3"]

[ext_resource type="Script" path="res://scripts/ui/title_menu.gd" id="1_03tm5"]
[ext_resource type="Texture2D" uid="uid://dai4cvyu2itiw" path="res://assets/Backgrounds/backgroundCastles.png" id="2_y037s"]
[ext_resource type="Texture2D" uid="uid://bkost1drhjct5" path="res://assets/ui/title.aseprite" id="3_w0yp5"]
[ext_resource type="Texture2D" uid="uid://df7hk44pt5yc7" path="res://assets/ui/tagline.aseprite" id="4_qh30a"]
[ext_resource type="PackedScene" uid="uid://j520piyp1nb7" path="res://scenes/ui/options_dialogue.tscn" id="5_s5w1l"]
[ext_resource type="Texture2D" uid="uid://bsu52vsbprepl" path="res://assets/characters/birb/seagull2.png" id="7_hakht"]
[ext_resource type="Texture2D" uid="uid://daqwp7pqeu534" path="res://assets/characters/birb/seagull.png" id="7_rdb0f"]
[ext_resource type="PackedScene" uid="uid://c7ospmgpaaaai" path="res://scenes/infra/background_music.tscn" id="9_jjxa5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sr3um"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kxv2v"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 400, 1)
angle_min = -45.4
direction = Vector3(100, 85.75, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
angular_velocity_min = 1.0
angular_velocity_max = 1.0
gravity = Vector3(100, 20.075, 0)
anim_speed_min = 5.0
anim_speed_max = 16.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_upwp8"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rho5v"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 100, 1)
gravity = Vector3(-100, 45, 0)
anim_speed_min = 20.0
anim_speed_max = 20.0

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03tm5")

[node name="TitleMenuUi" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y037s")
expand_mode = 2

[node name="Title" type="TextureRect" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 202.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_w0yp5")

[node name="Tagline" type="TextureRect" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -76.0
offset_right = 232.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qh30a")

[node name="OptionsDialogue" parent="TitleMenuUi" instance=ExtResource("5_s5w1l")]
layout_mode = 1
offset_left = -216.0
offset_top = -112.0
offset_right = -216.0
offset_bottom = -112.0

[node name="LeftBirbParticles" type="GPUParticles2D" parent="TitleMenuUi"]
visible = false
material = SubResource("CanvasItemMaterial_sr3um")
position = Vector2(-56, 272)
amount = 3
process_material = SubResource("ParticleProcessMaterial_kxv2v")
texture = ExtResource("7_hakht")
lifetime = 6.0
randomness = 0.5

[node name="RightBirbParticles" type="GPUParticles2D" parent="TitleMenuUi"]
visible = false
material = SubResource("CanvasItemMaterial_upwp8")
position = Vector2(1128, 272)
scale = Vector2(1.58893, 2.56683)
amount = 4
process_material = SubResource("ParticleProcessMaterial_rho5v")
texture = ExtResource("7_rdb0f")
lifetime = 7.0

[node name="StartButton" type="Button" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -64.0
offset_right = 152.0
offset_bottom = -16.0
grow_vertical = 0
text = "Start"

[node name="ExitButton" type="Button" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -64.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Exit"

[node name="OptionsButton" type="Button" parent="TitleMenuUi"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Options"

[node name="BackgroundMusic" parent="." instance=ExtResource("9_jjxa5")]

[connection signal="gui_input" from="TitleMenuUi/StartButton" to="." method="_on_start_button_gui_input"]
[connection signal="pressed" from="TitleMenuUi/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="gui_input" from="TitleMenuUi/ExitButton" to="." method="_on_exit_button_gui_input"]
[connection signal="pressed" from="TitleMenuUi/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="gui_input" from="TitleMenuUi/OptionsButton" to="." method="_on_options_button_gui_input"]
[connection signal="pressed" from="TitleMenuUi/OptionsButton" to="." method="_on_options_button_pressed"]
